v0.0.2, 2013-02-17

  BugFixes